--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <ul>
       <li><a href="https://github.com" target="_blank">GitHub</a></li>
-      <li><a href="#">Apuntes</a></li>
+      <li><a href="https://chatgpt.com/">Chat GPT</a></li>
       <li><a href="#">Ideas</a></li>
     </ul>
   </div>
